--- a/Damps/res/values/styles.xml
+++ b/Damps/res/values/styles.xml
@@ -89,6 +89,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_alignParentLeft">true</item>
+        <item name="android:padding">5dp</item>
         <item name="android:textSize">20dp</item>
     </style>
 
