--- a/Damps/res/layout/headlines.xml
+++ b/Damps/res/layout/headlines.xml
@@ -6,9 +6,14 @@
     <RelativeLayout
         android:id="@+id/rl_hea_layout1"
         style="@style/titlebar" >
+        
+        <ImageView
+            android:id="@+id/iv_hea_back"
+            style="@style/pic_title_left" />
 
         <TextView
             style="@style/title"
+            android:layout_toRightOf="@+id/iv_hea_back"
             android:text="@string/News" />
 
         <ProgressBar
