--- a/Damps/res/layout/new_message.xml
+++ b/Damps/res/layout/new_message.xml
@@ -6,9 +6,14 @@
     <RelativeLayout
         android:id="@+id/rl_newm_layout1"
         style="@style/titlebar" >
+        
+        <ImageView
+            android:id="@+id/iv_newm_back"
+            style="@style/pic_title_left" />
 
         <TextView
             style="@style/title"
+            android:layout_toRightOf="@+id/iv_newm_back"
             android:text="@string/new_message" />
 
         <ProgressBar
@@ -22,7 +27,7 @@
             style="@style/pic_title_right"
             android:contentDescription="@string/pic_acc"
             android:onClick="sendMessage"
-            android:src="@drawable/accept" />
+            android:src="@drawable/accept" /> 
     </RelativeLayout>
 
     <Spinner
