--- a/Damps/res/values/styles.xml
+++ b/Damps/res/values/styles.xml
@@ -11,7 +11,6 @@
     <style name="title" parent="@android:style/TextAppearance.Medium">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_alignParentLeft">true</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:textSize">25dp</item>
         <item name="android:textColor">#FFFFFFFF</item>
@@ -23,6 +22,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">20dp</item>
         <item name="android:padding">5dp</item>
+        <item name="android:paddingLeft">8dp</item>
         <item name="android:textColor">@color/damps_blau</item>
         <item name="android:background">@color/hellgrau</item>
     </style>
@@ -66,6 +66,17 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#808080</item>
         <item name="android:textStyle">italic</item>
+    </style>
+    
+    <style name="pic_title_left">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_alignParentLeft">true</item>
+        <item name="android:clickable">true</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:src">@drawable/previous_item</item>
+        <item name="android:onClick">back</item>
+        <item name="android:contentDescription">@string/pic_back</item>
     </style>
 
     <style name="pic_title_mid">
