--- a/Damps/res/layout/forum.xml
+++ b/Damps/res/layout/forum.xml
@@ -7,8 +7,13 @@
         android:id="@+id/rl_for_layout1"
         style="@style/titlebar" >
 
+        <ImageView
+            android:id="@+id/iv_for_back"
+            style="@style/pic_title_left" />
+
         <TextView
             style="@style/title"
+            android:layout_toRightOf="@+id/iv_for_back"
             android:text="@string/forum" />
 
         <ProgressBar
