--- a/Damps/res/layout/new_post.xml
+++ b/Damps/res/layout/new_post.xml
@@ -7,8 +7,13 @@
         android:id="@+id/rl_newp_layout1"
         style="@style/titlebar" >
 
+        <ImageView
+            android:id="@+id/iv_newp_back"
+            style="@style/pic_title_left" />
+
         <TextView
             style="@style/title"
+            android:layout_toRightOf="@+id/iv_newp_back"
             android:text="@string/new_post" />
 
         <ProgressBar
