--- a/Damps/res/layout/new_thread.xml
+++ b/Damps/res/layout/new_thread.xml
@@ -7,8 +7,13 @@
         android:id="@+id/rl_newt_layout1"
         style="@style/titlebar" >
 
+        <ImageView
+            android:id="@+id/iv_newt_back"
+            style="@style/pic_title_left" />
+
         <TextView
             style="@style/title"
+            android:layout_toRightOf="@+id/iv_newt_back"
             android:text="@string/new_thread" />
 
         <ProgressBar
