--- a/Damps/res/layout/options.xml
+++ b/Damps/res/layout/options.xml
@@ -4,11 +4,16 @@
     android:layout_height="match_parent" >
 
     <RelativeLayout
-        android:id="@+id/rl_hea_layout1"
+        android:id="@+id/rl_opt_layout1"
         style="@style/titlebar" >
+
+        <ImageView
+            android:id="@+id/iv_opt_back"
+            style="@style/pic_title_left" />
 
         <TextView
             style="@style/title"
+            android:layout_toRightOf="@+id/iv_opt_back"
             android:text="@string/options" />
     </RelativeLayout>
 
@@ -19,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/rl_hea_layout1"
+        android:layout_below="@+id/rl_opt_layout1"
         android:text="@string/leaguedomain"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
