--- a/Damps/res/layout/standings.xml
+++ b/Damps/res/layout/standings.xml
@@ -7,8 +7,13 @@
         android:id="@+id/rl_sta_layout1"
         style="@style/titlebar" >
 
+        <ImageView
+            android:id="@+id/iv_sta_back"
+            style="@style/pic_title_left" />
+
         <TextView
             style="@style/title"
+            android:layout_toRightOf="@+id/iv_sta_back"
             android:text="@string/standings" />
 
         <ProgressBar
