--- a/Damps/res/layout/starters.xml
+++ b/Damps/res/layout/starters.xml
@@ -7,8 +7,13 @@
         android:id="@+id/rl_start_layout1"
         style="@style/titlebar" >
 
+        <ImageView
+            android:id="@+id/iv_start_back"
+            style="@style/pic_title_left" />
+
         <TextView
             style="@style/title"
+            android:layout_toRightOf="@+id/iv_start_back"
             android:text="@string/starters" />
 
         <ProgressBar
