--- a/Damps/res/layout/home.xml
+++ b/Damps/res/layout/home.xml
@@ -25,7 +25,7 @@
             android:contentDescription="@string/pic_log"
             android:onClick="log" />
     </RelativeLayout>
-
+        
     <ImageView
         android:id="@+id/iv_hom_view1"
         android:layout_width="wrap_content"
@@ -151,7 +151,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="startTeammanagement"
-            android:text="@string/teammanagement" />
+            android:text="@string/teammanagement"
+            android:enabled="false" />
 
         <Button
             android:id="@+id/bu_hom_nachrichten"
@@ -159,7 +160,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="startMessages"
-            android:text="@string/messages" />
+            android:text="@string/messages"
+            android:enabled="false" />
     </LinearLayout>
 
 </RelativeLayout>
