--- a/Damps/res/layout/messages.xml
+++ b/Damps/res/layout/messages.xml
@@ -1,34 +1,50 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/tabhost"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-     <RelativeLayout
-        android:id="@+id/rl_mes_layout1"
-        style="@style/titlebar" >
-        
-        <ImageView
-            android:id="@+id/iv_mes_back"
-            style="@style/pic_title_left" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
 
-        <TextView
-            style="@style/title"
-            android:layout_toRightOf="@+id/iv_mes_back"
-            android:text="@string/messages" />
+        <RelativeLayout
+            android:id="@+id/rl_mes_layout1"
+            style="@style/titlebar" >
 
-        <ProgressBar
-            android:id="@+id/pb_mes_bar1"
-            style="@style/progressbar"
-            android:layout_alignParentRight="false"
-            android:layout_toLeftOf="@+id/iv_mes_accept" />
+            <ImageView
+                android:id="@+id/iv_mes_back"
+                style="@style/pic_title_left" />
 
-        <ImageView
-            android:id="@+id/iv_mes_accept"
-            style="@style/pic_title_right"
-            android:contentDescription="@string/pic_new"
-            android:onClick="sendMessage"
-            android:src="@drawable/content_new" /> 
-    </RelativeLayout>
-    
+            <TextView
+                style="@style/title"
+                android:layout_toRightOf="@+id/iv_mes_back"
+                android:text="@string/messages" />
 
-</RelativeLayout>
+            <ProgressBar
+                android:id="@+id/pb_mes_bar1"
+                style="@style/progressbar"
+                android:layout_alignParentRight="false"
+                android:layout_toLeftOf="@+id/iv_mes_accept" />
+
+            <ImageView
+                android:id="@+id/iv_mes_accept"
+                style="@style/pic_title_right"
+                android:contentDescription="@string/pic_new"
+                android:onClick="sendMessage"
+                android:src="@drawable/content_new" />
+        </RelativeLayout>
+
+        <TabWidget
+            android:id="@android:id/tabs"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+
+        <FrameLayout
+            android:id="@android:id/tabcontent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+    </LinearLayout>
+
+</TabHost>
