--- a/Damps/res/values/arrays.xml
+++ b/Damps/res/values/arrays.xml
@@ -125,7 +125,7 @@
         <item>CAR</item>
         <item>NO</item>
         <item>TB</item>
-        <item>ARIs</item>
+        <item>ARI</item>
         <item>STL</item>
         <item>SF</item>
         <item>SEA</item>
