--- a/Damps/res/values/colors.xml
+++ b/Damps/res/values/colors.xml
@@ -4,6 +4,7 @@
 	<color name="weis">#FFFFFF</color>
     <color name="schwarz">#000000</color>
     <color name="damps_blau">#036CAE</color>
+    <color name="damps_blau_inactive">#30036CAE</color>
     <color name="hellgrau">#B2B2B2</color>
     <color name="hellhellgrau">#F0F0F0</color>
     <color name="dunkelgrau">#4D4D4D</color>
