--- a/Damps/res/layout/messageitem.xml
+++ b/Damps/res/layout/messageitem.xml
@@ -9,7 +9,8 @@
         android:id="@+id/iv_mes_read"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/pic_read" />
+        android:contentDescription="@string/pic_read"
+        android:layout_gravity="center_vertical" />
 
     <LinearLayout
         android:layout_width="match_parent"
