--- a/Damps/res/layout/thread.xml
+++ b/Damps/res/layout/thread.xml
@@ -42,7 +42,8 @@
         android:id="@+id/android:list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/rl_thr_layout1" >
+        android:layout_below="@+id/rl_thr_layout1"
+        android:longClickable="true" >
     </ListView>
 
 </RelativeLayout>
