--- a/Damps/res/values/styles.xml
+++ b/Damps/res/values/styles.xml
@@ -8,6 +8,17 @@
         <item name="android:background">@color/damps_blau</item>
     </style>
 
+    <style name="button">
+        <item name="android:layout_width">0dip</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@drawable/button</item>
+        <item name="android:textColor">@color/weis</item>
+        <item name="android:textSize">23dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:layout_margin">4dp</item>
+    </style>
+
     <style name="title" parent="@android:style/TextAppearance.Medium">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -34,8 +45,8 @@
         <item name="android:textSize">17dp</item>
         <item name="android:padding">3dp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/damps_blau</item>
-        <item name="android:background">@color/hellgrau</item>
+         <item name="android:textColor">@color/weis</item>
+        
     </style>
 
     <style name="text">
@@ -58,6 +69,7 @@
     <style name="thr_title">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/damps_blau</item>
         <item name="android:textSize">20dp</item>
     </style>
 
@@ -67,7 +79,7 @@
         <item name="android:textColor">#808080</item>
         <item name="android:textStyle">italic</item>
     </style>
-    
+
     <style name="pic_title_left">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
