--- a/Damps/res/layout-land/roster.xml
+++ b/Damps/res/layout-land/roster.xml
@@ -12,9 +12,9 @@
             style="@style/pic_title_left" />
 
         <TextView
+            android:id="@+id/tv_ros_view1"
             style="@style/title"
-            android:layout_toRightOf="@+id/iv_ros_back"
-            android:id="@+id/tv_ros_view1" />
+            android:layout_toRightOf="@+id/iv_ros_back" />
 
         <ProgressBar
             android:id="@+id/pb_ros_bar1"
@@ -26,30 +26,37 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rl_ros_layout1"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginTop="5dp"
         android:orientation="vertical"
-        android:stretchColumns="2" >
+        android:stretchColumns="3" >
 
-        <TableRow>
-
-            <!--
-                    <TextView
-    				android:layout_width="wrap_content"
-    				android:layout_height="wrap_content"
-    				android:padding="3px"
-    				android:text="@string/team"
-    				android:onClick="sortTeam"/>
-            -->
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" >
 
             <TextView
                 style="@style/column"
+                android:layout_marginRight="1dp"
+                android:background="@drawable/column_left"
+                android:onClick="sortTeam"
+                android:text="@string/team" />
+
+            <TextView
+                style="@style/column"
+                android:layout_marginLeft="1dp"
+                android:layout_marginRight="1dp"
+                android:background="@drawable/column_mid"
                 android:onClick="sortPos"
-                android:padding="3dp"
                 android:text="@string/pos" />
 
             <TextView
                 style="@style/column"
+                android:layout_marginLeft="1dp"
+                android:layout_marginRight="1dp"
+                android:background="@drawable/column_mid"
                 android:onClick="sortName"
-                android:padding="3dp"
                 android:text="@string/name" />
 
             <TextView
@@ -58,6 +65,8 @@
 
             <TextView
                 style="@style/column"
+                android:layout_marginLeft="1dp"
+                android:background="@drawable/column_right"
                 android:onClick="sortScore"
                 android:text="@string/score" />
         </TableRow>
